--- a/trackyr/templates/layout.html
+++ b/trackyr/templates/layout.html
@@ -91,6 +91,6 @@
                 }
             });
             $("#notificationAgentSelection").trigger("change");
-        </script>>
+        </script>
     </body>
 </html>
