create 'test' feature for sources and notification agents

--- a/src/trackyr/templates/create-notification-agent.html
+++ b/src/trackyr/templates/create-notification-agent.html
@@ -89,6 +89,9 @@
             <div class="form-group">
                 {{ form.submit(class="btn btn-outline-info") }}
             </div>
+            <div class="form-group">
+                {{ form.test(class="btn btn-outline-info") }}
+            </div>
         </form>
     </div>
 {% endblock content %}
