--- a/src/trackyr/templates/create-source.html
+++ b/src/trackyr/templates/create-source.html
@@ -76,6 +76,31 @@
             <div class="form-group">
                 {{ form.submit(class="btn btn-outline-info") }}
             </div>
+            <div class="form-group">
+                {{ form.test(class="btn btn-outline-info") }}
+            </div>
         </form>
     </div>
+
+    <div class="row">
+        <div class="container col-md-3"></div>
+
+        <div class="container col-md-6">
+            {% with notifications = get_flashed_messages(category_filter=["prime"]) %}
+                {% if notifications %}
+                    {%- for message in notifications %}
+                        <div class="alert alert-info alert-dismissible fade show" role="alert">
+                            <span>{{ message }}</span>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                    {% endfor -%}
+                {% endif %}
+            {% endwith %}
+        </div>
+        
+<i class="fa fa-y-combinator" aria-hidden="true"></i>
+    </div>
+
 {% endblock content %}
