allow task priming

--- a/src/trackyr/templates/create-task.html
+++ b/src/trackyr/templates/create-task.html
@@ -96,6 +96,19 @@
                         {{ form.exclude(class="form-control form-control-lg") }}
                     {% endif %}
                 </div>
+                <div class="form-group">
+                    {{ form.prime_count.label(class="form-control-label") }}
+                    {% if form.prime_count.errors %}
+                        {{ form.prime_count(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.prime_count.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.prime_count(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
             </fieldset>
             <div class="form-group">
                 {{ form.submit(class="btn btn-outline-info") }}
