update update button label

--- a/src/trackyr/templates/trackyr-config.html
+++ b/src/trackyr/templates/trackyr-config.html
@@ -4,6 +4,6 @@
 
     <div class="content-section">
         <h3>Update Available</h3>
-        <a class="btn btn-success btm-sm mt-1 mb-1" href="{{ url_for('trackyr_config.update') }}">Update</a>
+        <a class="btn btn-success btm-sm mt-1 mb-1" href="{{ url_for('trackyr_config.update') }}">Update Now</a>
     </div>
 {% endblock content %}
