--- a/src/trackyr/templates/trackyr-config.html
+++ b/src/trackyr/templates/trackyr-config.html
@@ -2,8 +2,10 @@
 {% block content %}
     <h1>{{ title }}</h1>
 
-    <div class="content-section">
-        <h3>Update Available</h3>
-        <a class="btn btn-success btm-sm mt-1 mb-1" href="{{ url_for('trackyr_config.update') }}">Update Now</a>
-    </div>
+    {% if update_available %}
+        <div class="content-section">
+            <h3>Update Available</h3>
+            <a class="btn btn-success btm-sm mt-1 mb-1" href="{{ url_for('trackyr_config.update') }}">Update</a>
+        </div>
+    {% endif %}
 {% endblock content %}
