Temporary: "Alpha" Test greeting & discord invite

--- a/src/trackyr/templates/dashboard.html
+++ b/src/trackyr/templates/dashboard.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
     <h1>Dashboard</h1>
-    <p>This is will be the main page where we can see cool graphs and data and stuff.</p>
+    <p>Trackyr is in "Alpha" testing mode. Please report any issues or suggestions to our Discord channel: </p>
+    <iframe src="https://discordapp.com/widget?id=689477994750017558&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
 {% endblock content %}
