--- a/src/trackyr/templates/create-notification-agent.html
+++ b/src/trackyr/templates/create-notification-agent.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
     <div class="content-section">
-        <form method="POST" action="">
+        <form method="POST" action="" enctype="multipart/form-data">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">{{ legend }}</legend>
@@ -59,7 +59,8 @@
                         {% endif %}
                     </div>
                     <div class="form-group">
-                        {{ form.icon.label(class="form-control-label") }}
+
+                        {{ form.icon.label(class="form-control-label", style="width:100%;") }}
                         {% if form.icon.errors %}
                             {{ form.icon(class="form-control form-control-lg is-invalid") }}
                             <div class="invalid-feedback">
@@ -68,21 +69,12 @@
                                 {% endfor %}
                             </div>
                         {% else %}
-                            {{ form.icon(class="form-control form-control-lg") }}
+                            {% if form.icon.data %}
+                                 <img style="width:50px;float:left;margin-right:20px" src="{{form.icon.data}}">
+                            {% endif %}
+                            {{ form.icon(class="form-control form-control-lg", style="width:50%;;") }}
                         {% endif %}
-                    </div>
-                    <div class="form-group">
-                        {{ form.channel.label(class="form-control-label") }}
-                        {% if form.channel.errors %}
-                            {{ form.channel(class="form-control form-control-lg is-invalid") }}
-                            <div class="invalid-feedback">
-                                {% for error in form.channel.errors %}
-                                    <span>{{ error }}</span>
-                                {% endfor %}
-                            </div>
-                        {% else %}
-                            {{ form.channel(class="form-control form-control-lg") }}
-                        {% endif %}
+
                     </div>
                 </div>
             </fieldset>
