--- a/src/trackyr/templates/sources.html
+++ b/src/trackyr/templates/sources.html
@@ -25,39 +25,84 @@
                         <td>{{ source.website }}</td>
                         <td>{{ source.location }}</td>
                         <td>{{ source.range }} km</td>
-                        <td><a class="btn btn-secondary btm-sm mt-1 mb-1" href="{{ url_for('sources.edit_source', source_id=source.id) }}">Edit</a></td>
-                        <td><a class="btn btn-danger btm-sm mt-1 mb-1" href="{{ url_for('sources.delete_source', source_id=source.id) }}">Delete</a></td>
+                        <td><a class="btn btn-secondary btm-sm mt-1 mb-1" href="{{ url_for('sources.edit_source', source_id=source.id) }}"><i class="fa fa-pencil" style="font-size:16px"></i></a></td>
+                        <td><button class="btn btn-danger btm-sm mt-1 mb-1"  data-toggle="modal" data-target="#modalDelete{{ source.id }}"><i class="fa fa-trash" style="font-size:16px"></i></button></td>
                     </tr>
                 {% endif %}
             {% endfor %}
         </tbody>
     </table>
 
-    <!-- <h3>Reddit</h3>
-    <table class="table table-hover">
-        <thead>
-            <tr>
-                <th scope="col">Name</th>
-                <th scope="col">Subreddit</th>
-                <th scope="col"></th>
-                <th scope="col"></th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for source in sources %}
-                {% if source.module == 2 %}
-                    <tr>
-                        <td>{{ source.name }}</td>
-                        <td>{{ source.subreddit }}</td>
-                        <td><a class="btn btn-secondary btm-sm mt-1 mb-1" href="{{ url_for('sources.edit_source', source_id=source.id) }}">Edit</a></td>
-                        <td><a class="btn btn-danger btm-sm mt-1 mb-1" href="{{ url_for('sources.delete_source', source_id=source.id) }}">Delete</a></td>
-                    </tr>
-                {% endif %}
-            {% endfor %}
-        </tbody>
-    </table> -->
-
     <p>
         <a class="btn btn-primary" href="{{ url_for('sources.create_source') }}">Create Sources</a>
     </p>
+
+    {% for source in sources %}
+        <div class="modal fade" id="modalDelete{{ source.id }}" tabindex="-1" role="dialog" aria-labelledby="modelDeleteTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h5 class="modal-title" id="modelDeleteTitle">Are you sure you want to delete {{ source.name }}?</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                </div>
+                <div class="modal-body">
+                    {% set count = [0] %}
+                    {% for task in tasks %}
+                        {% if source.id in task.source %}
+                            {% if count.append(count.pop() + 1) %}
+                            {% endif %}
+                        {% endif %}
+                    {% endfor %}
+                    <b>Deleting this source will affect {{ count[0] }} {% if count[0] == 1 %}task{% else %}tasks{% endif %}.</b>
+                <p>
+                    {% if count[0] >= 1 %}
+                        <p>
+                            Clicking on one of the edit buttons below will exit from this page and take you to that tasks page.
+                        </p>
+                        <table class="table table-hover">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Task</th>
+                                    <th scope="col">Action</th>
+                                    <th scope="col"></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for task in tasks %}
+                                    {% if source.id in task.source %} 
+                                        <tr>
+                                            <td>{{ task.name }}</td>
+                                            <td>
+                                                {% if task.source|length == 1 %}
+                                                    Task will be deleted.
+                                                {% else %}
+                                                    Task will remain, source will be removed.
+                                                {% endif %}
+                                            </td>
+                                            <td><a class="btn btn-secondary btm-sm mt-1 mb-1" href="{{ url_for('tasks.edit_task', task_id=task.id) }}"><i class="fa fa-pencil" style="font-size:16px"></i></a></td>
+                                        </tr>
+                                    {% endif %}
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    {% else %}
+                        <p>You can safely delete this source.</p>
+                    {% endif %}
+                </p>
+                <p>
+                    Are you sure you want to delete this source? This is a <u>irreversible</u> action, the source cannot be restored.
+                </p>
+                </div>
+                <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">No Thanks</button>
+                <form action="{{ url_for('sources.delete_source', source_id=source.id) }}" method="POST">
+                    <button type="submit" class="btn btn-danger" name="submit_button">Yes! Delete it!</button> 
+                </form>
+                </div>
+            </div>
+            </div>
+        </div>
+    {% endfor %}
 {% endblock content %}
