--- a/src/trackyr/templates/notification-agents.html
+++ b/src/trackyr/templates/notification-agents.html
@@ -12,8 +12,7 @@
                 <th scope="col">Name</th>
                 <th scope="col">Username</th>
                 <th scope="col">Icon</th>
-                <th scope="col"></th>
-                <th scope="col"></th>
+                <th scope="col">Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -23,8 +22,7 @@
                         <td>{{ agent.name }}</td>
                         <td>{{ agent.username }}</td>
                         <td>{{ agent.icon }}</td>
-                        <td><a class="btn btn-secondary btm-sm mt-1 mb-1" href="{{ url_for('notification_agents.edit_notification_agent', notification_agent_id=agent.id) }}">Edit</a></td>
-                        <td><a class="btn btn-danger btm-sm mt-1 mb-1" href="{{ url_for('notification_agents.delete_notification_agent', notification_agent_id=agent.id) }}">Delete</a></td>
+                        <td><a class="btn btn-secondary btm-sm mt-1 mb-1" href="{{ url_for('notification_agents.edit_notification_agent', notification_agent_id=agent.id) }}"><i class="fa fa-pencil" style="font-size:16px"></i></a>  <button class="btn btn-danger btm-sm mt-1 mb-1"  data-toggle="modal" data-target="#modalDelete{{ agent.id }}"><i class="fa fa-trash" style="font-size:16px"></i></button></td>
                     </tr>  
                 {% endif %}
             {% endfor %}
@@ -56,4 +54,73 @@
     <p>
         <a class="btn btn-primary" href="{{ url_for('notification_agents.create_notification_agents') }}">Create Notification Agents</a>
     </p>
+
+    {% for agent in notification_agents %}
+        <div class="modal fade" id="modalDelete{{ agent.id }}" tabindex="-1" role="dialog" aria-labelledby="modelDeleteTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                <h5 class="modal-title" id="modelDeleteTitle">Are you sure you want to delete {{ agent.name }}?</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                </div>
+                <div class="modal-body">
+                    {% set count = [0] %}
+                    {% for task in tasks %}
+                        {% if agent.id in task.notification_agent %}
+                            {% if count.append(count.pop() + 1) %}
+                            {% endif %}
+                        {% endif %}
+                    {% endfor %}
+                    <b>Deleting this notification agent will affect {{ count[0] }} {% if count[0] == 1 %}task{% else %}tasks{% endif %}.</b>
+                <p>
+                    {% if count[0] >= 1 %}
+                        <p>
+                            Clicking on one of the edit buttons below will exit from this page and take you to that tasks page.
+                        </p>
+                        <table class="table table-hover">
+                            <thead>
+                                <tr>
+                                    <th scope="col">Task</th>
+                                    <th scope="col">Action</th>
+                                    <th scope="col"></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for task in tasks %}
+                                    {% if agent.id in task.notification_agent %} 
+                                        <tr>
+                                            <td>{{ task.name }}</td>
+                                            <td>
+                                                {% if task.notification_agent|length == 1 %}
+                                                    Task will be deleted.
+                                                {% else %}
+                                                    Task will remain, agent will be removed.
+                                                {% endif %}
+                                            </td>
+                                            <td><a class="btn btn-secondary btm-sm mt-1 mb-1" href="{{ url_for('tasks.edit_task', task_id=task.id) }}"><i class="fa fa-pencil" style="font-size:16px"></i></a></td>
+                                        </tr>
+                                    {% endif %}
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    {% else %}
+                        <p>You can safely delete this agent.</p>
+                    {% endif %}
+                </p>
+                <p>
+                    Are you sure you want to delete this agent? This is a <u>irreversible</u> action, the agent cannot be restored.
+                </p>
+                </div>
+                <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">No Thanks</button>
+                <form action="{{ url_for('notification_agents.delete_notification_agent', notification_agent_id=agent.id) }}" method="POST">
+                    <button type="submit" class="btn btn-danger" name="submit_button">Yes! Delete it!</button> 
+                </form>
+                </div>
+            </div>
+            </div>
+        </div>
+    {% endfor %}
 {% endblock content %}
