--- a/src/trackyr/templates/notification-agents.html
+++ b/src/trackyr/templates/notification-agents.html
@@ -116,6 +116,7 @@
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">No Thanks</button>
                 <form action="{{ url_for('notification_agents.delete_notification_agent', notification_agent_id=agent.id) }}" method="POST">
+                    {{ form.hidden_tag() }}
                     <button type="submit" class="btn btn-danger" name="submit_button">Yes! Delete it!</button> 
                 </form>
                 </div>
