--- a/src/trackyr/templates/sources.html
+++ b/src/trackyr/templates/sources.html
@@ -96,6 +96,7 @@
                 <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">No Thanks</button>
                 <form action="{{ url_for('sources.delete_source', source_id=source.id) }}" method="POST">
+                    {{ form.hidden_tag() }}
                     <button type="submit" class="btn btn-danger" name="submit_button">Yes! Delete it!</button> 
                 </form>
                 </div>
