--- a/src/trackyr/templates/create-source.html
+++ b/src/trackyr/templates/create-source.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
+<div id="overlay"><img src="/static/spinner.gif"></div>
     <div class="content-section">
         <form method="POST" action="">
             {{ form.hidden_tag() }}
@@ -81,6 +82,55 @@
             </div>
         </form>
     </div>
+<script>
+        jQuery(document).ready(function($){
+             var csrf_token = $("#csrf_token").val()
+                $("#test").click(function(evt){
+                    evt.preventDefault();
+                     data =  {
+                       website: $("#website").val(),
+                       module: $("#sourceSelection").val()
+                     }
+                    var xhr = new XMLHttpRequest()
+
+                    xhr.onreadystatechange = function () {
+                      if(xhr.readyState === XMLHttpRequest.OPENED) {
+                          $("#overlay").show();
+                        }
+                      // In local files, status is 0 upon success in Mozilla Firefox
+                      if(xhr.readyState === XMLHttpRequest.DONE) {
+                          $("#overlay").hide();
+                        var status = xhr.status;
+                        if (status === 0 || (status >= 200 && status < 400)) {
+
+                          $("#notificationMessage .alert > span").text(xhr.response);
+                          $("#notificationMessage").show();
+
+                        } else {
+                          $("#notificationMessage .alert span").text("Error!");
+                          $("#notificationMessage").show();
+                        }
+                      }
+                    };
+                    xhr.open("POST", "/sources/test", true);
+                    xhr.setRequestHeader("X-CSRFToken", csrf_token);
+                    xhr.setRequestHeader('Content-Type', 'application/json; charset=UTF-8');
+                    // send the collected data as JSON
+                    xhr.send(JSON.stringify(data));
+                    $("#notificationMessage").html("<div class=\"alert alert-info alert-dismissible fade show\" role=\"alert\">\n" +
+                        "                                <span>Test sent!</span>\n" +
+                        "                                <button type=\"button\" class=\"close\" data-dismiss=\"alert\" aria-label=\"Close\">\n" +
+                        "                                    <span aria-hidden=\"true\">×</span>\n" +
+                        "                                </button>\n" +
+                        "                            </div>")
+                    $("#notificationMessage").show();
+
+
+                });
+
+
+        });
+    </script>
 
     <div class="row">
         <div class="container col-md-3"></div>
