fixed blank web url and child selector

--- a/src/trackyr/templates/create-source.html
+++ b/src/trackyr/templates/create-source.html
@@ -107,7 +107,7 @@
                           $("#notificationMessage").show();
 
                         } else {
-                          $("#notificationMessage .alert span").text("Error!");
+                          $("#notificationMessage .alert > span").text("Error!");
                           $("#notificationMessage").show();
                         }
                       }
